[gd_scene load_steps=8 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" path="res://game/player/player.gd" id="1_ffboj"]
[ext_resource type="PackedScene" uid="uid://b7070gfoko4mo" path="res://game/weapons/impact.tscn" id="2_eptbn"]
[ext_resource type="PackedScene" uid="uid://nqhnarpow5vv" path="res://game/weapons/blaster/blaster.glb" id="2_m7qvp"]
[ext_resource type="Texture2D" uid="uid://v7x1bf5ooqxa" path="res://game/weapons/blaster/crosshair.png" id="2_sjm3x"]
[ext_resource type="Script" path="res://game/weapons/weapon.gd" id="2_xonqh"]

[sub_resource type="Resource" id="Resource_e0ywr"]
script = ExtResource("2_xonqh")
model = ExtResource("2_m7qvp")
position = Vector3(0, 0, 0)
rotation = Vector3(0, 0, 0)
muzzle_position = Vector3(0, 0, 0)
cooldown = 0.1
max_distance = 10
damage = 25.0
spread = 0.0
shot_count = 1
knockback = 20
sound_shoot = ""
crosshair = ExtResource("2_sjm3x")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_j1kmp"]
radius = 0.3
height = 1.0

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_ffboj")
weapons = Array[ExtResource("2_xonqh")]([SubResource("Resource_e0ywr")])
impact_scene = ExtResource("2_eptbn")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_j1kmp")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera" type="Camera3D" parent="Head"]
unique_name_in_owner = true
cull_mask = 1048573
current = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="CameraItem" type="Camera3D" parent="Head/Camera/SubViewportContainer/SubViewport"]
cull_mask = 1047554
fov = 40.0

[node name="Container" type="Node3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -1, -2.25)

[node name="Muzzle" type="Sprite3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
unique_name_in_owner = true

[node name="RayCast" type="RayCast3D" parent="Head/Camera"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -10)

[node name="snd_footsteps" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="snd_jump" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="snd_shoot" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="snd_weapon_change" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="Cooldown" type="Timer" parent="."]
unique_name_in_owner = true
